--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "dependencies": {
         "bootstrap": "^4.4.1",
-        "jquery": "^3.5.0",
+        "jquery": "3.4.1",
         "js-levenshtein": "^1.1.6",
         "popper.js": "^1.16.1",
         "react": "^16.13.1",
